# Spaceship_Titanic

./: .gitignore  Dockerfile  DockerfileApi  LiidClassifierModel.py  README.md  api.py  docker-compose.yml  main.py  pyproject.toml
notebooks/: spacetitanic.ipynb
