[tool.poetry]
name = "spaceship-titanic"
version = "0.1.0"
description = ""
authors = ["Liid <51267703+L11D@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
catboost = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
